--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,41 @@
   scroll-behavior: smooth;
   font-size: 16px;
 }
+.hamburger-menu {
+  top: 0;
+  left: 20px;
+  z-index: 10;
+  cursor: pointer;
+}
+
+.menu-bar1,
+.menu-bar2,
+.menu-bar3 {
+  width: 30px;
+  height: 0.2rem;
+  background-color: black;
+  margin: 0.8rem 0.8rem;
+  transition: 0.4s;
+}
+
+.hamburger-menu.active .menu-bar1 {
+  /* transform: rotate(-45deg) translate(-7px, 8px); */
+  transform: rotate(-45deg) translate(-0.7rem, 0.8rem);
+}
+
+/* FADE OUT SECOND BAR */
+.hamburger-menu.active .menu-bar2 {
+  opacity: 0;
+}
+
+/* ROTATE LAST BAR */
+.hamburger-menu.active .menu-bar3 {
+  /* transform: rotate(45deg) translate(-6px, -8px); */
+  transform: rotate(45deg) translate(-0.6rem, -0.8rem);
+}
+.connect {
+  transform: rotateY(45deg);
+}
 #landing {
   background: linear-gradient(
       0deg,
@@ -57,62 +92,50 @@ nav {
   width: 15%;
   background: #303030;
   color: white;
+  z-index: 100;
 }
 
 main {
   margin-left: 15%;
 }
-
+ul.nav-links.active {
+  list-style: none;
+  background-color: #232323;
+}
+ul.a {
+  text-decoration: none;
+}
 .nav-links {
   position: fixed;
   top: -100%;
   left: 15%;
   right: 0;
   height: 100vh;
-  background: white;
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
-  align-items: center;
   transition: top 0.3s linear;
 }
-
-.nav-links.active {
-  top: 0;
-  z-index: 10000;
-}
-
-#sidebar {
-  background-color: rgba(39, 39, 39, 0.7);
-  background-color: #1c1c1c;
-  width: 15%;
-  height: 100vh;
-  position: fixed;
-}
-#main {
-  margin-left: 15%;
-}
-a {
-  color: black;
-}
-.offcanvas {
-  width: 100%;
-  margin-left: 15%;
-  height: 100vh;
-  background-color: #1c1c1c;
-  z-index: 2000;
-}
-
-a.nav-link {
+.direct {
+  text-decoration: none;
   color: white;
   font-size: 30px;
   font-size: 50px;
   display: inline-block;
   font-weight: 800;
+  padding: 35px;
 }
 
-a.nav-link:hover {
+.direct:hover {
   color: #75dab4;
+}
+
+.nav-links.active {
+  top: 0;
+}
+
+#main {
+  margin-left: 15%;
 }
 
 small {
@@ -128,6 +151,28 @@ section {
 }
 
 /* ABOUT */
+.about h3 {
+  font-family: "Fjalla One", sans-serif;
+  margin-bottom: 80px;
+  line-height: 1.4;
+  font-size: 4vw;
+  letter-spacing: 2px;
+}
+.about-icon {
+  font-size: 20px;
+  text-shadow: #75dab4 2px 2px 3px;
+}
+.about-details {
+  list-style: none;
+}
+.details:hover {
+  position: relative;
+  top: -10px;
+  transition: all 0.25s;
+  border-bottom: #232323 3px solid;
+  border-right: #232323 3px solid;
+  box-shadow: #93b6c8 2px 2px 2px;
+}
 .skill {
   width: 80%;
   margin: 60px auto;
@@ -215,17 +260,61 @@ section {
 .carousel-inner {
   width: 360px;
   height: 500px;
+  margin-left: 30px;
 }
 .carousel-item {
   background-color: #75dab4;
   width: 360px;
   height: 500px;
+  padding: 20px;
 }
 
 .carousel-indicators {
-  padding-bottom: 60px;
+  padding-left: 20px;
+  position: absolute;
+  bottom: 0;
+  list-style: none;
+  z-index: 2;
+}
+.testpic {
+  bottom: 0;
+}
+h4.resume-title {
+  color: #161619;
 }
 
+/* codepen */
+.timeline.timeline-four .date-content {
+  width: 50%;
+  float: left;
+  position: relative;
+}
+.timeline.timeline-four .timeline-content {
+  width: 50%;
+  padding: 0.625rem 0 0.625rem 3.125rem;
+  float: right;
+}
+.timeline.timeline-four .date-outer::after {
+  content: "";
+  width: 150px;
+  height: 150px;
+  margin: 0 auto;
+  border-radius: 50%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  border: 0.0625rem solid #242e4c;
+  left: 6px;
+}
+.timeline.timeline-four .timeline-item:nth-child(2n) .timeline-content {
+  padding: 0.625rem 3.125rem 0.625rem 0;
+  text-align: right;
+}
+.timeline.timeline-four .year {
+  display: block;
+  font-weight: 700;
+  font-size: 1rem;
+}
 /* resume */
 /* .resume-item::before {
   content: "";
@@ -238,6 +327,14 @@ section {
   background: #fff;
   border: 2px solid #34b7a7;
 } */
+.container-right {
+  width: 50%;
+  padding: 0.625rem 0 0.625rem 3.125rem;
+  float: right;
+}
+.container-left {
+  width: 50%;
+}
 
 ul.timeline {
   list-style-type: none;
@@ -270,15 +367,6 @@ ul.timeline > li:before {
   z-index: 10;
 }
 
-.about h3 {
-  font-family: "Fjalla One", sans-serif;
-  margin-bottom: 80px;
-  line-height: 1.4;
-  font-size: 4vw;
-  letter-spacing: 2px;
-}
-
-/* projects */
 .things-container {
   background-color: rgb(45, 44, 44);
 }
@@ -337,4 +425,38 @@ ul.timeline > li:before {
 
 .back {
   transform: rotateY(180deg);
+}
+
+/* projects */
+.projects-container {
+  padding: 20px;
+}
+
+.project-card {
+  position: relative;
+  padding-bottom: 10px;
+}
+
+.project-info {
+  background: linear-gradient(
+    to top,
+    rgba(0, 0, 0, 0.7) 0%,
+    rgba(0, 0, 0, 0) 100%
+  );
+  color: white;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  opacity: 0;
+  transition: all 0.3s linear;
+}
+
+.project-card:hover .project-info {
+  opacity: 1;
 }
