--- a/styles.css
+++ b/styles.css
@@ -5,12 +5,16 @@
   box-sizing: border-box;
   scroll-behavior: smooth;
   font-size: 16px;
+  
 }
 .hamburger-menu {
   top: 0;
-  left: 20px;
   z-index: 10;
   cursor: pointer;
+  background-color: #303030;
+  border-color: #303030;
+  box-shadow: aliceblue 2px 2px 2px 2px;
+  padding-left: ;
 }
 
 .menu-bar1,
@@ -18,9 +22,10 @@
 .menu-bar3 {
   width: 30px;
   height: 0.2rem;
-  background-color: black;
+  background-color: rgb(12, 12, 12);
   margin: 0.8rem 0.8rem;
   transition: 0.4s;
+  border-radius: 12px;
 }
 
 .hamburger-menu.active .menu-bar1 {
@@ -38,24 +43,36 @@
   /* transform: rotate(45deg) translate(-6px, -8px); */
   transform: rotate(45deg) translate(-0.6rem, -0.8rem);
 }
-.connect {
-  transform: rotateY(45deg);
-}
-#landing {
-  background: linear-gradient(
-      0deg,
-      rgba(33, 33, 33, 0.167),
-      rgba(20, 20, 20, 0.3)
-    ),
-    url("./images/landingpic.jpg");
-  background-size: cover;
-  background-position: center;
+
+div.landing.carousel-item{
   height: 100vh;
+  width:100%;
+  background-color: #101314;
+}
+div.landing.carousel-item{
+  height: 100vh;
+  width:100%;
+}
+.landing-section-title {
+  bottom: 0;
+  z-index: 30;
+}
+.img-gradient {
+  position:relative;
 }
 
-.landing-section-title {
-  display: flex;
-  flex-direction: column;
+.img-gradient::after {
+  content: '';
+  position: absolute;
+  left: 0; top: 0;
+  width: 100%; height: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7));
+}
+.carousel-control-next{
+  
+}
+.carousel-control-prev{
+   
 }
 .pagebreak-container {
   background-color: rgb(45, 44, 44);
@@ -69,8 +86,9 @@
 h1 {
   color: #fff;
   font-weight: 800;
-  font-size: 10vw;
+  font-size: 15vh;
   letter-spacing: -3px;
+  text-shadow: #232323 0px 2px 8px;
 }
 h2 {
   color: antiquewhite;
@@ -89,14 +107,14 @@ nav {
   left: 0;
   top: 0;
   bottom: 0;
-  width: 15%;
+  width: 12%;
   background: #303030;
   color: white;
   z-index: 100;
 }
 
 main {
-  margin-left: 15%;
+  margin-left: 12%;
 }
 ul.nav-links.active {
   list-style: none;
@@ -108,7 +126,7 @@ ul.a {
 .nav-links {
   position: fixed;
   top: -100%;
-  left: 15%;
+  left: 12%;
   right: 0;
   height: 100vh;
   display: flex;
@@ -135,7 +153,7 @@ ul.a {
 }
 
 #main {
-  margin-left: 15%;
+  margin-left: 12%;
 }
 
 small {
@@ -257,19 +275,19 @@ section {
 }
 
 /* testimonials */
-.carousel-inner {
+div.testimonial.carousel-inner {
   width: 360px;
   height: 500px;
   margin-left: 30px;
 }
-.carousel-item {
+div.testimonial.carousel-item {
   background-color: #75dab4;
   width: 360px;
   height: 500px;
   padding: 20px;
 }
 
-.carousel-indicators {
+div.testimonial.carousel-indicators {
   padding-left: 20px;
   position: absolute;
   bottom: 0;
@@ -282,93 +300,70 @@ section {
 h4.resume-title {
   color: #161619;
 }
+/* resume */
+.section-heading{
+  color: aliceblue;
+  font-family: "Fjalla One", sans-serif;
+  line-height: 1.4;
+  font-size: 80px;
+  letter-spacing: 2px;
+}
+.resume{
+  background-color: rgb(45, 44, 44)}
 
-/* codepen */
-.timeline.timeline-four .date-content {
-  width: 50%;
-  float: left;
-  position: relative;
-}
-.timeline.timeline-four .timeline-content {
-  width: 50%;
-  padding: 0.625rem 0 0.625rem 3.125rem;
-  float: right;
-}
-.timeline.timeline-four .date-outer::after {
-  content: "";
-  width: 150px;
-  height: 150px;
-  margin: 0 auto;
-  border-radius: 50%;
-  position: absolute;
-  top: 0;
-  right: 0;
-  border: 0.0625rem solid #242e4c;
-  left: 6px;
-}
-.timeline.timeline-four .timeline-item:nth-child(2n) .timeline-content {
-  padding: 0.625rem 3.125rem 0.625rem 0;
+.timeline-section:nth-of-type(even) {
+  flex-direction: row-reverse;
   text-align: right;
 }
-.timeline.timeline-four .year {
-  display: block;
-  font-weight: 700;
-  font-size: 1rem;
+.timeline-section:nth-of-type(odd) {
+    align-self: flex-end;
 }
-/* resume */
-/* .resume-item::before {
-  content: "";
-  position: absolute;
-  width: 16px;
-  height: 16px;
-  border-radius: 50px;
-  left: -9px;
-  top: 0;
-  background: #fff;
-  border: 2px solid #34b7a7;
-} */
-.container-right {
-  width: 50%;
-  padding: 0.625rem 0 0.625rem 3.125rem;
-  float: right;
+.timeline-section{
+  background-color:rgb(45, 44, 44);
+  margin: 2.5%;
+  box-shadow: 0 3px 8px 0 rgb(15 15 20 / 20%);
+  display: flex;
+  width: 60%;
 }
-.container-left {
-  width: 50%;
+.timeline-header {
+  writing-mode: vertical-lr;
+  transform: rotate(180deg);
+  text-align: center;
+  font-weight: ;
+  padding: 20px;
+  background-color: rgb(95, 190, 219);
+  text-shadow: 3px 3px 10px black;
+  font-family: "Fjalla One", sans-serif;
+}
+.timeline-content {
+  padding: 50px 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: aliceblue;
+}
+.timeline-title, .timeline-heading {
+  font-size: 1.4rem;
+  margin-bottom: 20px;
+}
+.timeline-role {
+  font-size: 0.8rem;
+}
+.timeline-description {
+  margin-bottom: 20px;
+}
+.timeline-content ul {
+  list-style-type: none;
+}
+.timeline-content li {
+  border-bottom: 2px solid var(--blueGray2);
+  margin-bottom: 10px;
+  padding-bottom: 10px;
 }
 
-ul.timeline {
-  list-style-type: none;
-  position: relative;
-}
-ul.timeline:before {
-  content: " ";
-  background: #d4d9df;
-  display: inline-block;
-  position: absolute;
-  left: 29px;
-  width: 2px;
-  height: 100%;
-  z-index: 10;
-}
-ul.timeline > li {
-  margin: 20px 0;
-  padding-left: 40px;
-}
-ul.timeline > li:before {
-  content: " ";
-  background: white;
-  display: inline-block;
-  position: absolute;
-  border-radius: 50%;
-  border: 3px solid #22c0e8;
-  left: 20px;
-  width: 20px;
-  height: 20px;
-  z-index: 10;
-}
 
 .things-container {
-  background-color: rgb(45, 44, 44);
+  background-color: white;
 }
 .card-container {
   perspective: 900px;
@@ -416,6 +411,12 @@ ul.timeline > li:before {
   align-items: center;
   justify-content: center;
   font-size: 18px;
+  color: aliceblue;
+}
+
+ul{
+  list-style: none;
+
 }
 
 .card-container:hover .card {
