--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,91 @@
   padding: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
-  font-size: 16px;
+  font-size: 18px;
 }
 html,
 body {
   overflow-x: hidden;
+}
+
+.wrapper {
+  padding-top: 50%;
+}
+.wrapper .icon {
+  position: relative;
+  background-color: #aeaeae21;
+  border-radius: 50%;
+  margin: 10px;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  font-size: 22px;
+  display: inline-block;
+  align-items: center;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  transition: all 0.2s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  color: #333;
+  text-decoration: none;
+}
+.wrapper .tooltip {
+  position: absolute;
+  top: 0;
+  line-height: 1.5;
+  font-size: 14px;
+  background-color: #ffffff;
+  color: #ffffff;
+  padding: 5px 8px;
+  border-radius: 5px;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+.wrapper .tooltip::before {
+  position: absolute;
+  content: "";
+  height: 8px;
+  width: 8px;
+  background-color: #ffffff;
+  bottom: -3px;
+  left: 50%;
+  transform: translate(-50%) rotate(45deg);
+  transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+.wrapper .icon:hover .tooltip {
+  top: -45px;
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+.wrapper .icon:hover span,
+.wrapper .icon:hover .tooltip {
+  text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.1);
+}
+.wrapper .facebook:hover,
+.wrapper .facebook:hover .tooltip,
+.wrapper .facebook:hover .tooltip::before {
+  background-color: #3b5999;
+  color: #ffffff;
+}
+.wrapper .twitter:hover,
+.wrapper .twitter:hover .tooltip,
+.wrapper .twitter:hover .tooltip::before {
+  background-color: #46c1f6;
+  color: #ffffff;
+}
+.wrapper .instagram:hover,
+.wrapper .instagram:hover .tooltip,
+.wrapper .instagram:hover .tooltip::before {
+  background-color: #e1306c;
+  color: #ffffff;
+}
+.wrapper .github:hover,
+.wrapper .github:hover .tooltip,
+.wrapper .github:hover .tooltip::before {
+  background-color: #333333;
+  color: #ffffff;
 }
 
 .container-fluid {
@@ -18,16 +98,17 @@ body {
 
 .sidebtnnav {
   padding-top: 80%;
-  padding-left: 34px;
+  padding-left: 15%;
 }
 
 .hamburger-menu {
   top: 0;
   z-index: 10;
   cursor: pointer;
+  border-radius: 50%;
   background-color: #303030;
   border-color: #303030;
-  box-shadow: aliceblue 2px 2px 2px 2px;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
   padding-left: ;
 }
 
@@ -69,8 +150,15 @@ div.landing.carousel-item {
   bottom: 0;
   z-index: 30;
 }
+.landing-img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
 .img-gradient {
   position: relative;
+  height: 100%;
+  max-width: 100;
 }
 
 .img-gradient::after {
@@ -148,8 +236,8 @@ ul.a {
 }
 .direct {
   text-decoration: none;
-  color: ;
-  font-size: 30px;
+  color: white;
+  font-size: px;
   font-size: 20px;
   display: inline-block;
   font-weight: 800;
@@ -206,14 +294,9 @@ section {
   color: #75dab4;
   text-shadow: #232323 1px 1px 2px;
 }
-
-.details:hover {
-  position: relative;
-  top: -10px;
-  transition: all 0.25s;
-  box-shadow: #93b6c8 2px 2px 2px 2px;
+body[data-aos-duration="400"] [data-aos] {
+  transition-duration: 2s;
 }
-
 .deets {
   text-shadow: #232323 1px 1px 2px;
 }
@@ -302,17 +385,18 @@ section {
 
 /* testimonials */
 div.testimonial.carousel-inner {
-  width: 6000px;
-  height: 500px;
+  width: 600px;
+  height: 400px;
   margin-left: 30px;
 }
 div.testimonial.carousel-item {
   background-color: #75dab4;
   width: 600px;
-  height: 500px;
+  height: 400px;
   padding-left: 20px;
   padding-right: 20px;
   padding-top: 20px;
+  line-height: 1.5rem;
 }
 
 div.testimonial.carousel-indicators {
@@ -328,7 +412,11 @@ div.testimonial.carousel-indicators {
 div.test-person {
   display: flex;
   align-items: center;
-  padding: 20px;
+  bottom: 0;
+  gap: 20px;
+  margin-top: 12%;
+  border-top: 0.5px solid #101314;
+  padding-top: 10px;
 }
 
 h4.resume-title {
@@ -464,7 +552,7 @@ ul {
 
 /* projects */
 .projects-container {
-  padding: 20px;
+  padding: 100px 20px;
   background-color: #303030;
 }
 
