--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ h4 {
   font-size: 22px;
   font-weight: 300;
   letter-spacing: -0.5px;
+  text-shadow: #303030 1px 1px 1px 2px;
 }
 h1 {
   color: #fff;
@@ -31,6 +32,12 @@ h1 {
   text-shadow: #232323 0px 2px 8px;
 }
 
+h3{
+  color:#75dab4;
+  font-family: "Fjalla One", sans-serif;
+  font-size: 8vh;
+  text-shadow: #232323 2px 2px 4px;
+}
 
 main {
   margin-left: 14%;
@@ -39,9 +46,11 @@ ul.nav-links.active {
   list-style: none;
   background-color: #232323;
 }
+
 ul.a {
   text-decoration: none;
 }
+
 .nav-links {
   position: fixed;
   top: -100%;
@@ -86,6 +95,7 @@ section {
 .section-title {
   bottom: 0;
   padding-bottom: 45px;
+  padding-left: 6%;
 }
 
 nav {
@@ -268,8 +278,6 @@ div.landing.carousel-item {
   padding-left: 40px;
 }
 
-
-
 /* ABOUT */
 .about h3 {
   font-family: "Fjalla One", sans-serif;
@@ -387,17 +395,17 @@ body[data-aos-duration="400"] [data-aos] {
 
 /* testimonials */
 div.testimonial.carousel-inner {
-  width: 600px;
-  height: 400px;
+  min-width: 50vh;
+  min-height: 60vh;
   margin-left: 30px;
+  border-radius: 4%;
+  box-shadow: #232323 px 2px 2px 2px;
 }
 div.testimonial.carousel-item {
   background-color: #75dab4;
-  width: 600px;
-  height: 400px;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-top: 20px;
+  min-width: 50vh;
+  min-height: 60vh;
+  padding: 20px 20px 20px 20px;
   line-height: 1.5rem;
 }
 
@@ -409,15 +417,15 @@ div.testimonial.carousel-indicators {
   z-index: 300;
 }
 .testpic {
-  bottom: 0;
+  box-shadow: #232323 1px 1px 2px;
 }
 div.test-person {
   display: flex;
   align-items: center;
-  bottom: 0;
+  bottom: 5px;
   gap: 20px;
   margin-top: 12%;
-  border-top: 0.5px solid #101314;
+  border-top: 0.5px solid #fdffff;
   padding-top: 10px;
 }
 
@@ -527,6 +535,7 @@ h4.resume-title {
 }
 .front h4 {
   color: #75dab4;
+  
 }
 .front {
   display: flex;
@@ -534,7 +543,8 @@ h4.resume-title {
   align-items: center;
   justify-content:center;
   font-size: 30px;
-  background: linear-gradient(130deg, #94a8b9, #162f3a 100%);
+  text-shadow: #303030 1px 1px 1px 2px;
+  background: linear-gradient(130deg, #94a8b9, rgb(117 218 180 / 0%) 100%);
   
 }
 
@@ -548,7 +558,6 @@ h4.resume-title {
 
 ul {
   list-style: none;
-  
 }
 
 .back li{
@@ -573,21 +582,30 @@ ul {
 .project-card {
   position: relative;
   padding-bottom: 10px;
+  border-radius: 4%;
+  padding-top: 30px;
+  
 }
 
+.project-img{
+  border-radius: 4%;
+
+}
 .project-info {
   background: linear-gradient(
     to top,
     rgba(0, 0, 0, 0.7) 0%,
-    rgba(0, 0, 0, 0) 100%
+    rgba(50, 216, 175, 0) 100%
   );
+  border-radius: 4%;
   color: white;
+  text-shadow: #232323 1px 1px 2px;
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  padding: 30px;
+  padding: 10px 30px 10px 30px;
   display: flex;
   flex-direction: column;
   justify-content: end;
